gcc/testsuite/rust/rustc/ui/error-codes/E0415.rs
fn foo(f: i32, f: i32) {} // { dg-error ".E0415." "" { target *-*-* } }

fn main() {
}

